# SubtitleFormatter

./: .gitignore  README.md  SubtitleFormatter.vbs  config.yaml  main.py  pyproject.toml  requirements.txt  run_plugin_tests.py  scripts_manager.py  test_gui_v1.py  test_gui_v2.py
.github/workflows/: release.yml  version-check.yml
docs/: CHANGELOG.md  GUI_VERSION_SWITCH.md  configuration.md  design_requirements.md  development.md  known_issues_phase3.md  left_panel_testing.md  scripts_guide.md  testing_value_guide.md  unified_logging_guide.md  usage.md  version_management_guide.md
docs/Archive/: 20251014_refactor_to_src_architecture.md  scripts_orchestration_plan.md  unified_development_roadmap.md
docs/plan/: config_restore_ui_sync_expert_guide.md  configuration_management_design.md  debug_output_integration.md  gui_io_mode_design.md  gui_io_mode_redesign.md  infrastructure_architecture.md  model_manager_migration.md  plugin_architecture_design.md  plugin_development_guide.md  plugin_gui_design.md  right_panel_refactor_processing_flow.md  right_panel_refactor_processing_flow.zh-CN.md  scripts_management_strategy.md  src_refactor_plan.md  unified_logger_integration.md  working_config_separation_mechanism.md
docs/plan/ref/: model_storage_summary.md  process_texts.py
modules/: __init__.py  filler_remover.py  text_cleaner.py
plugins/builtin/punctuation_adder/: README.md  plugin.json  plugin.py
plugins/builtin/sentence_splitter/: README.md  plugin.json  plugin.py
plugins/builtin/text_cleaning/: README.md  plugin.json  plugin.py
plugins/builtin/text_to_sentences/: README.md  plugin.json  plugin.py
plugins/builtin/transcript_converter/: README.md  plugin.json  plugin.py
plugins/examples/simple_uppercase/: README.md  plugin.json  plugin.py
scripts/: README.md  Scripts_Development_Guide.md  clean_vtt.py  release.py  srt_resegment_by_json.py
scripts/Transcript_converter/: README.md  Transcript_converter.py
scripts/batch_replace/: README.md  main.vim
scripts/clean_vtt/: README.md  main.py
scripts/punctuation_adder/: ARCHITECTURE-Options.md  ARCHITECTURE-Options.zh.md  ARCHITECTURE.md  README.md  main.py  portable.py
scripts/release/: README.md
scripts/sentence_splitter/: ARCHITECTURE.md  README.md  main.py
scripts/smart_sentence_splitter/: ARCHITECTURE.md  README.md  main.py
scripts/srt_resegment/: README.md
scripts/text_diff/: README.md  diff_reporter.py  main.py  sequence_aligner.py  text_normalizer.py  utils.py
scripts/text_to_sentences/: README.md  main.py
scripts/txt_resegment/: README.md
src/subtitleformatter/: __init__.py  __main__.py  config.py  version.py
src/subtitleformatter/config/: __init__.py  config_coordinator.py  config_manager.py  config_state.py  default_config.toml  default_plugin_chain.toml  loader.py  plugin_chain_manager.py  plugin_config_manager.py  unified_config_manager.py
src/subtitleformatter/core/: __init__.py  filler_remover.py  line_breaker.py  sentence_handler.py  text_cleaner.py
src/subtitleformatter/gui/: main_window.py  main_window_v2.py
src/subtitleformatter/gui/assets/: app_icon.gfie
src/subtitleformatter/gui/components/: command_panel.py  configuration_management_panel.py  file_processing_panel.py  log_panel.py  plugin_chain_visualizer.py  plugin_config_panel.py  plugin_management_panel.py  processing_flow_panel.py  status_bar.py  tabs_panel.py
src/subtitleformatter/gui/pages/: about_page.py  advanced_page.py  basic_page.py
src/subtitleformatter/gui/styles/: theme_loader.py
src/subtitleformatter/gui/threads/: processing_thread.py
src/subtitleformatter/models/: __init__.py  model_manager.py
src/subtitleformatter/plugins/: __init__.py
src/subtitleformatter/plugins/base/: __init__.py  plugin_base.py  plugin_config.py  plugin_interface.py  plugin_registry.py
src/subtitleformatter/plugins/manager/: __init__.py  dependency_injection.py  plugin_config.py  plugin_config_manager.py  plugin_events.py  plugin_lifecycle.py
src/subtitleformatter/processors/: __init__.py  plugin_text_processor.py  text_processor.py
src/subtitleformatter/runtime/: config_materializer.py  plugin_runtime.py  processing_runner.py
src/subtitleformatter/services/: version_check_service.py
src/subtitleformatter/utils/: __init__.py  debug_output.py  path_utils.py  plugin_config_utils.py  unified_logger.py
tests/: __init__.py
tests/gui/left_panel/: test_configuration_management.py  test_plugin_config.py  test_plugin_management.py
tests/infrastructure/plugin_platform/: test_plugin_improvements.py  test_plugin_system_comprehensive.py  test_requirements_clarification.py
tests/plugins/: __init__.py  test_performance.py  test_plugin_improvements.py  test_plugin_integration.py  test_plugin_interfaces.py  test_plugin_system_comprehensive.py  test_requirements_clarification.py  test_user_scenarios.py
tests/plugins/base/: __init__.py  test_plugin_base.py  test_plugin_registry.py
tests/plugins/builtin/: __init__.py
tests/plugins/integration/: __init__.py  test_plugin_chain.py
tests/plugins/manager/: __init__.py  test_dependency_injection.py  test_plugin_config.py  test_plugin_events.py  test_plugin_lifecycle.py
tools/: srt_converter.py
tools/Transcript_converter/: README.md
(+14 files in other folders)
