[project]
name = "subtitleformatter"
version = "0.2.4"
description = "An intelligent subtitle processing tool that uses NLP models to clean, segment, and format text for better readability"
readme = "README.md"
authors = [
  { name = "VimWei" }
]
license = { text = "GPL-3.0" }
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.7.2",
    "pip>=25.0.1",
    # TOML writer for persisting user config
    "tomli-w>=1.0.0",
    # GUI
    "PySide6>=6.7.0",
]

[project.urls]
Homepage = "https://github.com/VimWei/SubtitleFormatter"

[project.scripts]
subtitleformatter = "subtitleformatter.__main__:main"
subtitleformatter-gui = "subtitleformatter.__main__:main_gui"


[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0,<7.2.0",
    "mypy>=1.0.0",
    "isort>=5.10.0",
    "coverage>=7.6.0",
]

[tool.uv]
package = true


[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "tests/.pytest_cache"


[tool.coverage.run]
data_file = "tests/.coverage"


[tool.coverage.html]
directory = "tests/htmlcov"


[tool.isort]
profile = "black"


[tool.black]
line-length = 100
target-version = ["py311"]
