[project]
name = "subtitleformatter"
version = "1.1.3"
description = "An intelligent subtitle processing tool that uses NLP models to clean, segment, and format text for better readability"
readme = "README.md"
authors = [
  { name = "VimWei" }
]
license = { text = "GPL-3.0" }
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.7.2",
    "pip>=25.0.1",
    # TOML writer for persisting user config
    "tomli-w>=1.0.0",
    # GUI
    "PySide6>=6.7.0",
    # Semantic analysis for intelligent sentence breaking
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/VimWei/SubtitleFormatter"

[project.scripts]
subtitleformatter = "subtitleformatter.__main__:main"


[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0,<7.2.0",
    "mypy>=1.0.0",
    "isort>=5.10.0",
    "coverage>=7.6.0",
]
# 脚本独立依赖组
diff = [
    "colorama>=0.4.4",
    "rich>=13.0.0",
    "click>=8.0.0",
]
clean-vtt = [
    "pandas>=1.5.0",
]
release = [
    "tomli-w>=1.0.0",
]
# 无依赖脚本不需要定义group

[tool.uv]
package = true


[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "tests/.pytest_cache"


[tool.coverage.run]
data_file = "tests/.coverage"


[tool.coverage.html]
directory = "tests/htmlcov"


[tool.isort]
profile = "black"


[tool.black]
line-length = 100
target-version = ["py311"]
